# gelf-formatter

./: .editorconfig  .flake8  .gitignore  .python-version  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
gelfformatter/: __init__.py  __version__.py  formatter.py
tests/: test_formatter.py
