[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gelf-formatter"
version = "1.0.0"
description = "GELF formatter for the Python standard library logging module."
readme = "README.md"
license = "MIT"
authors = [{ name = "Joao Pereira" }]
keywords = ["gelf", "graylog", "logger", "logging", "log", "json"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/joaodrp/gelf-formatter"
Repository = "https://github.com/joaodrp/gelf-formatter"
Issues = "https://github.com/joaodrp/gelf-formatter/issues"

[tool.setuptools.packages.find]
include = ["gelfformatter*"]
