[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 88
exclude =
    .git,
    .tox
    .eggs
    dist

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip =
    .git,
    .tox
    .eggs
    dist